--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./public/favicon_io (1)/favicon-32x32.png"
+    />
 
     <!-- For Merriweather (luxurious serif font) -->
     <link
